Add release note for 1.2.57 release

--- a/_data/release_notes_versions.json
+++ b/_data/release_notes_versions.json
@@ -1506,5 +1506,22 @@
       ],
       "api-docs":"ballerina-api-docs-1.2.56.zip",
       "release-notes":"ballerina-release-notes-1.2.56.md"
+    },
+    {
+      "version":"1.2.57",
+      "release-date":"2025-02-25",
+      "windows-installer":"ballerina-windows-installer-x64-1.2.57.msi",
+      "windows-installer-size":"272K",
+      "linux-installer":"ballerina-linux-installer-x64-1.2.57.deb",
+      "linux-installer-size":"153mb",
+      "macos-installer":"ballerina-macos-installer-x64-1.2.57.pkg",
+      "macos-installer-size":"172mb",
+      "rpm-installer":"ballerina-linux-installer-x64-1.2.57.rpm",
+      "rpm-installer-size":"175mb",
+      "other-artefacts":[  
+        "ballerina-1.2.57.zip"
+       ],
+      "api-docs":"ballerina-api-docs-1.2.57.zip",
+      "release-notes":"ballerina-release-notes-1.2.57.md"
     }
 ]
