--- a/_data/swanlake_release_notes_versions.json
+++ b/_data/swanlake_release_notes_versions.json
@@ -1664,5 +1664,28 @@
  	],
 	"api-docs":"ballerina-api-docs-2201.12.1.zip",
 	"release-notes":"ballerina-release-notes-2201.12.1.md"
+},
+{
+	"version":"2201.12.2",
+	"short-version":"2201.12.2",
+	"display-version":"2201.12.2 (Swan Lake Update 12)",
+	"release-date":"2025-03-17",
+	"windows-installer":"ballerina-2201.12.2-swan-lake-windows-x64.msi",
+	"windows-installer-size":"202mb",
+	"linux-installer":"ballerina-2201.12.2-swan-lake-linux-x64.deb",
+	"linux-installer-size":"234mb",
+	"linux-arm-installer":"ballerina-2201.12.2-swan-lake-linux-arm-x64.deb",
+	"linux-arm-installer-size":"234mb",
+	"macos-installer":"ballerina-2201.12.2-swan-lake-macos-x64.pkg",
+	"macos-installer-size":"266mb",
+	"macos-arm-installer":"ballerina-2201.12.2-swan-lake-macos-arm-x64.pkg",
+	"macos-arm-installer-size":"265mb",
+	"rpm-installer":"ballerina-2201.12.2-swan-lake-linux-x64.rpm",
+	"rpm-installer-size":"268mb",
+	"other-artefacts":[  
+		"ballerina-2201.12.2-swan-lake.zip"
+ 	],
+	"api-docs":"ballerina-api-docs-2201.12.2.zip",
+	"release-notes":"ballerina-release-notes-2201.12.2.md"
 }
 ]
