--- a/_data/swanlake_release_notes_versions.json
+++ b/_data/swanlake_release_notes_versions.json
@@ -1599,6 +1599,27 @@
    "release-notes":"ballerina-release-notes-2201.10.4.md"
 },
 {
+	"version":"2201.10.5",
+	"short-version":"2201.10.5",
+	"display-version":"2201.10.5 (Swan Lake Update 10)",
+	"release-date":"2025-04-25",
+	"windows-installer":"ballerina-2201.10.5-swan-lake-windows-x64.msi",
+	"windows-installer-size":"184mb",
+	"linux-installer":"ballerina-2201.10.5-swan-lake-linux-x64.deb",
+	"linux-installer-size":"213mb",
+	"macos-installer":"ballerina-2201.10.5-swan-lake-macos-x64.pkg",
+	"macos-installer-size":"244mb",
+	"macos-arm-installer":"ballerina-2201.10.5-swan-lake-macos-arm-x64.pkg",
+	"macos-arm-installer-size":"243mb",
+	"rpm-installer":"ballerina-2201.10.5-swan-lake-linux-x64.rpm",
+	"rpm-installer-size":"246mb",
+	"other-artefacts":[  
+		"ballerina-2201.10.5-swan-lake.zip"
+ 	],
+	"api-docs":"ballerina-api-docs-2201.10.5.zip",
+	"release-notes":"ballerina-release-notes-2201.10.5.md"
+},
+{
 	"version":"2201.11.0",
 	"short-version":"2201.11.0",
 	"display-version":"2201.11.0 (Swan Lake Update 11)",
