--- a/_data/swanlake_release_notes_versions.json
+++ b/_data/swanlake_release_notes_versions.json
@@ -1494,6 +1494,27 @@
    "release-notes":"ballerina-release-notes-2201.9.6.md"
 },
 {
+	"version":"2201.9.7",
+	"short-version":"2201.9.7",
+	"display-version":"2201.9.7 (Swan Lake Update 9)",
+	"release-date":"2025-05-08",
+	"windows-installer":"ballerina-2201.9.7-swan-lake-windows-x64.msi",
+	"windows-installer-size":"177mb",
+	"linux-installer":"ballerina-2201.9.7-swan-lake-linux-x64.deb",
+	"linux-installer-size":"202mb",
+	"macos-installer":"ballerina-2201.9.7-swan-lake-macos-x64.pkg",
+	"macos-installer-size":"237mb",
+	"macos-arm-installer":"ballerina-2201.9.7-swan-lake-macos-arm-x64.pkg",
+	"macos-arm-installer-size":"236mb",
+	"rpm-installer":"ballerina-2201.9.7-swan-lake-linux-x64.rpm",
+	"rpm-installer-size":"239mb",
+	"other-artefacts":[  
+		"ballerina-2201.9.7-swan-lake.zip"
+ 	],
+	"api-docs":"ballerina-api-docs-2201.9.7.zip",
+	"release-notes":"ballerina-release-notes-2201.9.7.md"
+},
+{
    "version":"2201.10.0",
    "short-version":"2201.10.0",
    "display-version":"2201.10.0 (Swan Lake Update 10)",
