--- a/_data/swanlake_release_notes_versions.json
+++ b/_data/swanlake_release_notes_versions.json
@@ -1750,5 +1750,28 @@
  	],
 	"api-docs":"ballerina-api-docs-2201.12.2.zip",
 	"release-notes":"ballerina-release-notes-2201.12.2.md"
+},
+{
+	"version":"2201.12.3",
+	"short-version":"2201.12.3",
+	"display-version":"2201.12.3 (Swan Lake Update 12)",
+	"release-date":"2025-04-11",
+	"windows-installer":"ballerina-2201.12.3-swan-lake-windows-x64.msi",
+	"windows-installer-size":"203mb",
+	"linux-installer":"ballerina-2201.12.3-swan-lake-linux-x64.deb",
+	"linux-installer-size":"235mb",
+	"linux-arm-installer":"ballerina-2201.12.3-swan-lake-linux-arm-x64.deb",
+	"linux-arm-installer-size":"234mb",
+	"macos-installer":"ballerina-2201.12.3-swan-lake-macos-x64.pkg",
+	"macos-installer-size":"266mb",
+	"macos-arm-installer":"ballerina-2201.12.3-swan-lake-macos-arm-x64.pkg",
+	"macos-arm-installer-size":"266mb",
+	"rpm-installer":"ballerina-2201.12.3-swan-lake-linux-x64.rpm",
+	"rpm-installer-size":"269mb",
+	"other-artefacts":[  
+		"ballerina-2201.12.3-swan-lake.zip"
+ 	],
+	"api-docs":"ballerina-api-docs-2201.12.3.zip",
+	"release-notes":"ballerina-release-notes-2201.12.3.md"
 }
 ]
