Add release note for 1.2.60

--- a/_data/release_notes_versions.json
+++ b/_data/release_notes_versions.json
@@ -1557,5 +1557,23 @@
       ],
       "api-docs": "ballerina-api-docs-1.2.59.zip",
       "release-notes": "ballerina-release-notes-1.2.59.md"
+   },
+   {
+      "version":"1.2.60",
+      "release-date":"2025-08-13",
+      "windows-installer":"ballerina-windows-installer-x64-1.2.60.msi",
+      "windows-installer-size":"272K",
+      "linux-installer":"ballerina-linux-installer-x64-1.2.60.deb",
+      "linux-installer-size":"173mb",
+      "macos-installer":"ballerina-macos-installer-x64-1.2.60.pkg",
+      "macos-installer-size":"192mb",
+      "rpm-installer":"ballerina-linux-installer-x64-1.2.60.rpm",
+      "rpm-installer-size":"195mb",
+      "other-artefacts":[
+         "ballerina-1.2.60.zip",
+         "ballerina-1.2.60.vsix"
+      ],
+      "api-docs":"ballerina-api-docs-1.2.60.zip",
+      "release-notes":"ballerina-release-notes-1.2.60.md"
    }
 ]
