Add release notes for 2201.12.8

--- a/_data/swanlake_release_notes_versions.json
+++ b/_data/swanlake_release_notes_versions.json
@@ -1863,5 +1863,28 @@
  	],
 	"api-docs":"ballerina-api-docs-2201.12.6.zip",
 	"release-notes":"ballerina-release-notes-2201.12.6.md"
+},
+{
+   "version":"2201.12.7",
+   "short-version":"2201.12.7",
+   "display-version":"2201.12.7 (Swan Lake Update 12)",
+   "release-date":"2025-06-11",
+   "windows-installer":"ballerina-2201.12.7-swan-lake-windows-x64.msi",
+   "windows-installer-size":"205mb",
+   "linux-installer":"ballerina-2201.12.7-swan-lake-linux-x64.deb",
+   "linux-installer-size":"241mb",
+   "linux-arm-installer":"ballerina-2201.12.7-swan-lake-linux-arm-x64.deb",
+   "linux-arm-installer-size":"241mb",
+   "macos-installer":"ballerina-2201.12.7-swan-lake-macos-x64.pkg",
+   "macos-installer-size":"273mb",
+   "macos-arm-installer":"ballerina-2201.12.7-swan-lake-macos-arm-x64.pkg",
+   "macos-arm-installer-size":"272mb",
+   "rpm-installer":"ballerina-2201.12.7-swan-lake-linux-x64.rpm",
+   "rpm-installer-size":"275mb",
+   "other-artefacts":[
+      "ballerina-2201.12.7-swan-lake.zip"
+   ],
+   "api-docs":"ballerina-api-docs-2201.12.7.zip",
+   "release-notes":"ballerina-release-notes-2201.12.7.md"
 }
 ]
