--- a/_data/release_notes_versions.json
+++ b/_data/release_notes_versions.json
@@ -1575,5 +1575,23 @@
       ],
       "api-docs":"ballerina-api-docs-1.2.60.zip",
       "release-notes":"ballerina-release-notes-1.2.60.md"
+   },
+   {
+      "version":"1.2.61",
+      "release-date":"2025-09-09",
+      "windows-installer":"ballerina-windows-installer-x64-1.2.61.msi",
+      "windows-installer-size":"272mb",
+      "linux-installer":"ballerina-linux-installer-x64-1.2.61.deb",
+      "linux-installer-size":"173mb",
+      "macos-installer":"ballerina-macos-installer-x64-1.2.61.pkg",
+      "macos-installer-size":"192mb",
+      "rpm-installer":"ballerina-linux-installer-x64-1.2.61.rpm",
+      "rpm-installer-size":"195mb",
+      "other-artefacts":[
+         "ballerina-1.2.61.zip",
+         "ballerina-1.2.61.vsix"
+      ],
+      "api-docs":"ballerina-api-docs-1.2.61.zip",
+      "release-notes":"ballerina-release-notes-1.2.61.md"
    }
 ]
