--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,4 +4,4 @@
 # See: https://help.github.com/articles/about-codeowners/
 
 # These owners will be the default owners for everything in the repo.
-*       @anupama-pathirage @sm1990 @keizer619
+*       @keizer619 @anupama-pathirage @sm1990
