--- a/.github/workflows/pre_release_homepage_sample_build.yml
+++ b/.github/workflows/pre_release_homepage_sample_build.yml
@@ -1,6 +1,7 @@
 # This builds the 'Ballerina.io' home page samples against the releasing distribution.
 
 on:
+  workflow_dispatch:
   pull_request:
     paths:
       - '_data/swanlake-latest/metadata.json'
