--- a/_data/swanlake_release_notes_versions.json
+++ b/_data/swanlake_release_notes_versions.json
@@ -1955,5 +1955,28 @@
  	],
 	"api-docs":"ballerina-api-docs-2201.12.10.zip",
 	"release-notes":"ballerina-release-notes-2201.12.10.md"
+},
+{
+	"version":"2201.13.0",
+	"short-version":"2201.13.0",
+	"display-version":"2201.13.0 (Swan Lake Update 13)",
+	"release-date":"2025-11-11",
+	"windows-installer":"ballerina-2201.13.0-swan-lake-windows-x64.msi",
+	"windows-installer-size":"276mb",
+	"linux-installer":"ballerina-2201.13.0-swan-lake-linux-x64.deb",
+	"linux-installer-size":"308mb",
+	"linux-arm-installer":"ballerina-2201.13.0-swan-lake-linux-arm-x64.deb",
+	"linux-arm-installer-size":"308mb",
+	"macos-installer":"ballerina-2201.13.0-swan-lake-macos-x64.pkg",
+	"macos-installer-size":"347mb",
+	"macos-arm-installer":"ballerina-2201.13.0-swan-lake-macos-arm-x64.pkg",
+	"macos-arm-installer-size":"347mb",
+	"rpm-installer":"ballerina-2201.13.0-swan-lake-linux-x64.rpm",
+	"rpm-installer-size":"350mb",
+	"other-artefacts":[  
+		"ballerina-2201.13.0-swan-lake.zip"
+ 	],
+	"api-docs":"ballerina-api-docs-2201.13.0.zip",
+	"release-notes":"ballerina-release-notes-2201.13.0.md"
 }
 ]
